css/tabs.css
html{
    height:100%;
    overflow: hidden;
}

body{ 
    height:100%;
    overflow: hidden;
    margin:0; 
    padding:0; 
}

.tab-app {
    height: 100%;
    width: 100%;
    margin-top: 2px;
}

.tab-navigator{
    display: block;
    height: 30px;
    width: 100%;
    margin-left: 3px;
}

.tab-close-button{
    margin-left: 10px;
}

.nav > li > a {
    padding: 3px 5px;
}

.hidden{
    display: none;
}

.tab-container {
    display: inline-block;
    height: calc(100% - 35px);
    width: 100%;
}

.tab-content {
    display: inline-block;
    height: 100%;
    width: 100%;
}

.form-group{
    margin-bottom: 1px;
}
.tab-toolbar{
    display: block;
    height: 32px;
    margin-top: 3px;
    margin-left: 3px;
    margin-right: 3px;
}

.input-connstr{
    padding: 3px 12px;
    height: 28px;
    font-size: 14px;
}

.tab-split {
    display: inline-block;
    height: calc(100% - 38px);
    width: 100%;
}

.tab-split-container{
    width: 100%;
}

.tab-editor {
    height: 100%;
    width: 100%;
    overflow: scroll;
    border:1px solid;
}

.hsplitter {
    cursor: ns-resize;
    height: 3px;
}

.output-console {
    display: block;
    height: 100%;
    width: 100%;
    overflow: auto;
}

.ace_editor{
    width: 100%;
    height: 100%;
}

.connection-error{
    font-family: monospace;
    white-space: pre-line;
}

.query-error{
    font-family: monospace;
    white-space: pre;
}

.table-resultset {
    width: auto;
}

.duration-div {
    margin-left: 10px;
}

.rows-count-div{
    margin-left: 10px;
}

.conn_history{
    position: absolute;
    width: 800px;
    z-index: 1000;
    border-radius: 5px;
}

.conn_history_list{
    list-style-type: none;
    padding-left: 0px;
}

.conn_history_hidden{
    display: none;
}

.conn_history_item{
    cursor: pointer;    
    padding-left: 10px;
}

